# Discontinuous_Galerkin1D_F90

./: .README.md.swp  CMakeLists.txt  README.md  compute_analytical.f90  compute_flux.f90  connectivity_matrix.f90  create1Dmodel_files  create1Dmodel_files.f90  lagrangep.f90  main.f90  readmodelfiles1D.f90  ricker.f90  shapefunc.f90  strassen_matmul.f90
